[gd_scene load_steps=4 format=3 uid="uid://b3keuf1aeixhq"]

[ext_resource type="PackedScene" uid="uid://djof5io4wy5s5" path="res://scenes/character/Character.tscn" id="1_8f6l6"]
[ext_resource type="Script" path="res://scenes/character/animals/animal.gd" id="2_wjkyi"]
[ext_resource type="Script" path="res://scenes/character/animals/animnal_fms.gd" id="3_gjbdi"]

[node name="Animal" instance=ExtResource("1_8f6l6")]
script = ExtResource("2_wjkyi")
live_time = 259200
MAX_SPEED = 20

[node name="CollisionShape2D" parent="." index="0"]
light_mask = 8
visibility_layer = 15

[node name="AnimatedSprite2D" parent="." index="1"]
animation = &""

[node name="FiniteStateMachine" parent="." index="2"]
script = ExtResource("3_gjbdi")

[node name="AnimationPlayer" parent="." index="3"]
root_node = NodePath("")

[node name="EnergyTimer" type="Timer" parent="." index="4"]

[node name="StateTimer" type="Timer" parent="." index="5"]
autostart = true

[node name="LiveTimer" type="Timer" parent="." index="6"]

[node name="EatTimer" type="Timer" parent="." index="7"]

[connection signal="timeout" from="EnergyTimer" to="." method="_on_energy_timer_timeout"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="timeout" from="LiveTimer" to="." method="_on_live_timer_timeout"]
[connection signal="timeout" from="EatTimer" to="." method="_on_eat_timer_timeout"]
